--- a/asset/pages/addApartment.html
+++ b/asset/pages/addApartment.html
@@ -27,40 +27,46 @@
       <div class="aside-menu">
         <ul class="menu-ul">
           <li class="menu-item  d-flex justify-content-start align-items-center">
+            <a class="menu-link d-flex justify-content-center align-items-center" href="../../index.html">
             <div class="menu-icon">
               <img src="../images/deve-icon.svg" alt="" />
             </div>
-            <a class="menu-link" href="../../index.html">Developments</a>
+              Developments</a>
           </li>
           <li class="menu-item active d-flex justify-content-start align-items-center">
+            <a class="menu-link d-flex justify-content-center align-items-center" href="../../appartment.html">
             <div class="menu-icon">
               <img src="../images/deve-icon.svg" alt="" />
             </div>
-            <a class="menu-link" href="../../appartment.html">Apartments</a>
+              Apartments</a>
           </li>
           <li class="menu-item d-flex justify-content-start align-items-center">
+            <a class="menu-link d-flex justify-content-center align-items-center" href="../../Furnishing.html">
             <div class="menu-icon">
               <img src="../images/furn-icon.svg" alt="" />
             </div>
-            <a class="menu-link" href="../../Furnishing.html">Furnishings</a>
+              Furnishings</a>
           </li>
           <li class="menu-item d-flex justify-content-start align-items-center">
+            <a class="menu-link d-flex justify-content-center align-items-center" href="../../fabric.html">
             <div class="menu-icon">
               <img src="../images/fbr-icon.svg" alt="" />
             </div>
-            <a class="menu-link" href="../../fabric.html">Fabrics</a>
+              Fabrics</a>
           </li>
           <li class="menu-item d-flex justify-content-start align-items-center">
+            <a class="menu-link d-flex justify-content-center align-items-center" href="../../clients.html">
             <div class="menu-icon">
               <img src="../images/client-icon.svg" alt="" />
             </div>
-            <a class="menu-link" href="../../clients.html">Clients</a>
+              Clients</a>
           </li>
           <li class="menu-item d-flex justify-content-start align-items-center">
+            <a class="menu-link d-flex justify-content-center align-items-center" href="../../demoUser.html">
             <div class="menu-icon">
               <img src="../images/client-icon.svg" alt="" />
             </div>
-            <a class="menu-link" href="../../demoUser.html">Demo Users</a>
+              Demo Users</a>
           </li>
         </ul>
       </div>
@@ -144,14 +150,14 @@
             <tr>
               <th class="col-3 col-lg-4 th">Apartment Number</th>
               <th class="col col-lg-4 th center-th">Development Name</th>
-              <th class="col-2 col-md-3 col-lg-4 th last-th">Action</th>
+              <th class="col-4 col-md-3 col-lg-4 th last-th">Action</th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <td class="col-3 col-lg-3">B - 70</td>
               <td class="col center-td col-lg-4">Serene Life Residences</td>
-              <td class="col-2 col-md-3 last-td col-lg-5">
+              <td class="col-4 col-md-3 last-td col-lg-5">
                 <div class="table-btns d-flex justify-content-center align-items-center">
                    <a href="addAprtFurn.html" class="custom-btn dark">Edit</a>
                   <a class="table-del" href="#" onclick="openModal()">Delete</a>
@@ -161,7 +167,7 @@
             <tr>
               <td class="col-3 col-lg-3">B - 70</td>
               <td class="col center-td col-lg-4">Serene Life Residences</td>
-              <td class="col-2 col-md-3 last-td col-lg-5">
+              <td class="col-4 col-md-3 last-td col-lg-5">
                 <div class="table-btns d-flex justify-content-center align-items-center">
                    <a href="addAprtFurn.html" class="custom-btn dark">Edit</a>
                   <a class="table-del" href="#" onclick="openModal()">Delete</a>
@@ -171,7 +177,7 @@
             <tr>
               <td class="col-3 col-lg-3">B - 70</td>
               <td class="col center-td col-lg-4">Serene Life Residences</td>
-              <td class="col-2 col-md-3 last-td col-lg-5">
+              <td class="col-4 col-md-3 last-td col-lg-5">
                 <div class="table-btns d-flex justify-content-center align-items-center">
                    <a href="addAprtFurn.html" class="custom-btn dark">Edit</a>
                   <a class="table-del" href="#" onclick="openModal()">Delete</a>
