--- a/asset/pages/addAprtFurn.html
+++ b/asset/pages/addAprtFurn.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="../../index.css" />
     <link rel="stylesheet" href="../../phone.css" />
   </head>
+
   <body>
     <aside id="sidebar">
       <div class="cross-btn" onclick="crossBtn()">
@@ -36,50 +37,80 @@
             <li
               class="menu-item d-flex justify-content-start align-items-center"
             >
-              <div class="menu-icon">
-                <img src="../images/deve-icon.svg" alt="" />
-              </div>
-              <a class="menu-link" href="../../index.html">Developments</a>
+              <a
+                class="menu-link d-flex justify-content-center align-items-center"
+                href="../../index.html"
+              >
+                <div class="menu-icon">
+                  <img src="../images/deve-icon.svg" alt="" />
+                </div>
+                Developments
+              </a>
             </li>
             <li
               class="menu-item d-flex justify-content-start align-items-center"
             >
-              <div class="menu-icon">
-                <img src="../images/deve-icon.svg" alt="" />
-              </div>
-              <a class="menu-link" href="../../appartment.html">Apartments</a>
+              <a
+                class="menu-link d-flex justify-content-center align-items-center"
+                href="../../appartment.html"
+              >
+                <div class="menu-icon">
+                  <img src="../images/deve-icon.svg" alt="" />
+                </div>
+                Apartments
+              </a>
             </li>
             <li
               class="menu-item active d-flex justify-content-start align-items-center"
             >
-              <div class="menu-icon">
-                <img src="../images/furn-icon.svg" alt="" />
-              </div>
-              <a class="menu-link" href="../../Furnishing.html">Furnishings</a>
+              <a
+                class="menu-link d-flex justify-content-center align-items-center"
+                href="../../Furnishing.html"
+              >
+                <div class="menu-icon">
+                  <img src="../images/furn-icon.svg" alt="" />
+                </div>
+                Furnishings</a
+              >
             </li>
             <li
               class="menu-item d-flex justify-content-start align-items-center"
             >
-              <div class="menu-icon">
-                <img src="../images/fbr-icon.svg" alt="" />
-              </div>
-              <a class="menu-link" href="../../fabric.html">Fabrics</a>
+              <a
+                class="menu-link d-flex justify-content-center align-items-center"
+                href="../../fabric.html"
+              >
+                <div class="menu-icon">
+                  <img src="../images/fbr-icon.svg" alt="" />
+                </div>
+                Fabrics</a
+              >
             </li>
             <li
               class="menu-item d-flex justify-content-start align-items-center"
             >
-              <div class="menu-icon">
-                <img src="../images/client-icon.svg" alt="" />
-              </div>
-              <a class="menu-link" href="../../clients.html">Clients</a>
+              <a
+                class="menu-link d-flex justify-content-center align-items-center"
+                href="../../clients.html"
+              >
+                <div class="menu-icon">
+                  <img src="../images/client-icon.svg" alt="" />
+                </div>
+                Clients</a
+              >
             </li>
             <li
               class="menu-item d-flex justify-content-start align-items-center"
             >
-              <div class="menu-icon">
-                <img src="../images/client-icon.svg" alt="" />
-              </div>
-              <a class="menu-link" href="../../demoUser.html">Demo Users</a>
+              <a
+                class="menu-link d-flex justify-content-center align-items-center"
+                href="../../demoUser.html"
+              >
+                <div class="menu-icon">
+                  <img src="../images/client-icon.svg" alt="" />
+                </div>
+                Demo Users</a
+              >
             </li>
           </ul>
         </div>
@@ -169,7 +200,9 @@
               <div class="col-6">
                 <p class="align-self-start">Space Name</p>
               </div>
-              <div class="col-6"><p>Number of Windows</p></div>
+              <div class="col-6">
+                <p>Number of Windows</p>
+              </div>
             </div>
           </div>
           <div class="apf-main-content">
