--- a/demoUser.html
+++ b/demoUser.html
@@ -38,50 +38,80 @@
             <li
               class="menu-item d-flex justify-content-start align-items-center"
             >
-              <div class="menu-icon">
-                <img src="asset/images/deve-icon.svg" alt="" />
-              </div>
-              <a class="menu-link" href="index.html">Developments</a>
+              <a
+                class="menu-link d-flex justify-content-center align-items-center"
+                href="index.html"
+              >
+                <div class="menu-icon">
+                  <img src="asset/images/deve-icon.svg" alt="" />
+                </div>
+                Developments</a
+              >
             </li>
             <li
               class="menu-item d-flex justify-content-start align-items-center"
             >
-              <div class="menu-icon">
-                <img src="asset/images/deve-icon.svg" alt="" />
-              </div>
-              <a class="menu-link" href="appartment.html">Apartments</a>
+              <a
+                class="menu-link d-flex justify-content-center align-items-center"
+                href="appartment.html"
+              >
+                <div class="menu-icon">
+                  <img src="asset/images/deve-icon.svg" alt="" />
+                </div>
+                Apartments</a
+              >
             </li>
             <li
               class="menu-item d-flex justify-content-start align-items-center"
             >
-              <div class="menu-icon">
-                <img src="asset/images/furn-icon.svg" alt="" />
-              </div>
-              <a class="menu-link" href="Furnishing.html">Furnishings</a>
+              <a
+                class="menu-link d-flex justify-content-center align-items-center"
+                href="Furnishing.html"
+              >
+                <div class="menu-icon">
+                  <img src="asset/images/furn-icon.svg" alt="" />
+                </div>
+                Furnishings</a
+              >
             </li>
             <li
               class="menu-item d-flex justify-content-start align-items-center"
             >
-              <div class="menu-icon">
-                <img src="asset/images/fbr-icon.svg" alt="" />
-              </div>
-              <a class="menu-link" href="fabric.html">Fabrics</a>
+              <a
+                class="menu-link d-flex justify-content-center align-items-center"
+                href="fabric.html"
+              >
+                <div class="menu-icon">
+                  <img src="asset/images/fbr-icon.svg" alt="" />
+                </div>
+                Fabrics</a
+              >
             </li>
             <li
               class="menu-item d-flex justify-content-start align-items-center"
             >
-              <div class="menu-icon">
-                <img src="asset/images/client-icon.svg" alt="" />
-              </div>
-              <a class="menu-link" href="clients.html">Clients</a>
+              <a
+                class="menu-link d-flex justify-content-center align-items-center"
+                href="clients.html"
+              >
+                <div class="menu-icon">
+                  <img src="asset/images/client-icon.svg" alt="" />
+                </div>
+                Clients</a
+              >
             </li>
             <li
               class="menu-item active d-flex justify-content-start align-items-center"
             >
-              <div class="menu-icon">
-                <img src="asset/images/client-icon.svg" alt="" />
-              </div>
-              <a class="menu-link" href="demoUser.html">Demo Users</a>
+              <a
+                class="menu-link d-flex justify-content-center align-items-center"
+                href="demoUser.html"
+              >
+                <div class="menu-icon">
+                  <img src="asset/images/client-icon.svg" alt="" />
+                </div>
+                Demo Users</a
+              >
             </li>
           </ul>
         </div>
