--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="phone.css" />
   </head>
+
   <body>
     <aside id="sidebar">
       <div class="cross-btn" onclick="crossBtn()">
@@ -37,50 +38,81 @@
             <li
               class="menu-item active d-flex justify-content-start align-items-center"
             >
-              <div class="menu-icon">
-                <img src="asset/images/deve-icon.svg" alt="" />
-              </div>
-              <a class="menu-link" href="index.html">Developments</a>
+              <a
+                class="menu-link d-flex justify-content-center align-items-center"
+                href="index.html"
+              >
+                <div class="menu-icon">
+                  <img src="asset/images/deve-icon.svg" alt="" />
+                </div>
+                <p>Developments</p>
+              </a>
             </li>
             <li
               class="menu-item d-flex justify-content-start align-items-center"
             >
-              <div class="menu-icon">
-                <img src="asset/images/deve-icon.svg" alt="" />
-              </div>
-              <a class="menu-link" href="appartment.html">Apartments</a>
+              <a
+                class="menu-link d-flex justify-content-center align-items-center"
+                href="appartment.html"
+              >
+                <div class="menu-icon">
+                  <img src="asset/images/deve-icon.svg" alt="" />
+                </div>
+
+                <p>Appartments</p></a
+              >
             </li>
             <li
               class="menu-item d-flex justify-content-start align-items-center"
             >
-              <div class="menu-icon">
-                <img src="asset/images/furn-icon.svg" alt="" />
-              </div>
-              <a class="menu-link" href="Furnishing.html">Furnishings</a>
+              <a
+                class="menu-link d-flex justify-content-center align-items-center"
+                href="Furnishing.html"
+              >
+                <div class="menu-icon">
+                  <img src="asset/images/furn-icon.svg" alt="" />
+                </div>
+                <p>Furnishings</p></a
+              >
             </li>
             <li
               class="menu-item d-flex justify-content-start align-items-center"
             >
-              <div class="menu-icon">
-                <img src="asset/images/fbr-icon.svg" alt="" />
-              </div>
-              <a class="menu-link" href="fabric.html">Fabrics</a>
+              <a
+                class="menu-link d-flex justify-content-center align-items-center"
+                href="fabric.html"
+              >
+                <div class="menu-icon">
+                  <img src="asset/images/fbr-icon.svg" alt="" />
+                </div>
+                Fabrics</a
+              >
             </li>
             <li
               class="menu-item d-flex justify-content-start align-items-center"
             >
-              <div class="menu-icon">
-                <img src="asset/images/client-icon.svg" alt="" />
-              </div>
-              <a class="menu-link" href="clients.html">Clients</a>
+              <a
+                class="menu-link d-flex justify-content-center align-items-center"
+                href="clients.html"
+              >
+                <div class="menu-icon">
+                  <img src="asset/images/client-icon.svg" alt="" />
+                </div>
+                Clients</a
+              >
             </li>
             <li
               class="menu-item d-flex justify-content-start align-items-center"
             >
-              <div class="menu-icon">
-                <img src="asset/images/client-icon.svg" alt="" />
-              </div>
-              <a class="menu-link" href="demoUser.html">Demo Users</a>
+              <a
+                class="menu-link d-flex justify-content-center align-items-center"
+                href="demoUser.html"
+              >
+                <div class="menu-icon">
+                  <img src="asset/images/client-icon.svg" alt="" />
+                </div>
+                Demo Users</a
+              >
             </li>
           </ul>
         </div>
@@ -148,7 +180,9 @@
               <div
                 class="dev-card-buttons d-flex justify-content-end align-items-center"
               >
-                <a class="btn-edit" href="#">Edit</a>
+                <a class="btn-edit" href="asset/pages/addApartment.html"
+                  >Edit</a
+                >
                 <a class="btn-delete" href="#" onclick="openModal()">Delete</a>
               </div>
             </div>
