--- a/main-aprt-space.html
+++ b/main-aprt-space.html
@@ -28,40 +28,46 @@
       <div class="aside-menu">
         <ul class="menu-ul">
           <li class="menu-item d-flex justify-content-start align-items-center">
+            <a class="menu-link d-flex justify-content-center align-items-center" href="index.html">
             <div class="menu-icon">
               <img src="asset/images/deve-icon.svg" alt="" />
             </div>
-            <a class="menu-link" href="index.html">Developments</a>
+              Developments</a>
           </li>
           <li class="menu-item active d-flex justify-content-start align-items-center">
+            <a class="menu-link d-flex justify-content-center align-items-center" href="appartment.html">
             <div class="menu-icon">
               <img src="asset/images/deve-icon.svg" alt="" />
             </div>
-            <a class="menu-link" href="appartment.html">Apartments</a>
+              Apartments</a>
           </li>
           <li class="menu-item d-flex justify-content-start align-items-center">
+            <a class="menu-link d-flex justify-content-center align-items-center" href="Furnishing.html">
             <div class="menu-icon">
               <img src="asset/images/furn-icon.svg" alt="" />
             </div>
-            <a class="menu-link" href="Furnishing.html">Furnishings</a>
+              Furnishings</a>
           </li>
           <li class="menu-item d-flex justify-content-start align-items-center">
+            <a class="menu-link d-flex justify-content-center align-items-center" href="fabric.html">
             <div class="menu-icon">
               <img src="asset/images/fbr-icon.svg" alt="" />
             </div>
-            <a class="menu-link" href="fabric.html">Fabrics</a>
+              Fabrics</a>
           </li>
           <li class="menu-item d-flex justify-content-start align-items-center">
+            <a class="menu-link d-flex justify-content-center align-items-center" href="clients.html">
             <div class="menu-icon">
               <img src="asset/images/client-icon.svg" alt="" />
             </div>
-            <a class="menu-link" href="clients.html">Clients</a>
+              Clients</a>
           </li>
           <li class="menu-item d-flex justify-content-start align-items-center">
+            <a class="menu-link d-flex justify-content-center align-items-center" href="demoUser.html">
             <div class="menu-icon">
               <img src="asset/images/client-icon.svg" alt="" />
             </div>
-            <a class="menu-link" href="demoUser.html">Demo Users</a>
+              Demo Users</a>
           </li>
         </ul>
       </div>
