--- a/asset/pages/add-fabric-deal.html
+++ b/asset/pages/add-fabric-deal.html
@@ -109,6 +109,7 @@
       <div class="afd-inp-sec mt-5">
         <h4>Add Fabric Deal</h4>
         <div class="row">
+          <form action=""></form>
           <div class="col-6">
             <div class="d-flex flex-column w-100">
               <label for="">Premium Fabric</label>
@@ -142,7 +143,8 @@ Premium Foam coated 'Avila ' blockout and 'Optimascreen Plus' sunscreen blinds f
 
     <div class="apf-last-btns afd-btns moto-auto-btns d-flex justify-content-center align-items-center">
       <a href="../../fabric.html" class="back custom-btn" type="sumbit">Cancel</a>
-      <a href="../../fabric.html" type="submit" class="custom-btn continue">Save</a>
+
+      <button type="submit" class="custom-btn continue">Save</button>
     </div>
   </div>
   <!-- ======================================================== -->
