--- a/clients.html
+++ b/clients.html
@@ -181,23 +181,25 @@
               aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <div class="client-modal-inp d-flex flex-column">
-              <select name="" class="selects" id="">
-                <option selected value="">Select Development</option>
-                <option value="">Development 1</option>
-                <option value="">Development 2</option>
-              </select>
-              <select name="" class="selects" id="">
-                <option selected value="">Select Apartment</option>
-                <option value="">Apartment 1</option>
-                <option value="">Apartment 2</option>
-              </select>
-              <input type="text" class="inputs" placeholder="Client Name" name="" id="" />
-              <input type="email" class="inputs" placeholder="Client Email" name="" id="" />
-              <input type="password" class="inputs" placeholder="Create Password" name="" id="" />
-              <input type="password" class="inputs" placeholder="Confirm Password" name="" id="" />
-              <button class="custom-btn dark">Create Login</button>
-            </div>
+            <form action="">
+              <div class="client-modal-inp d-flex flex-column">
+                <select name="" class="selects" id="">
+                  <option selected value="">Select Development</option>
+                  <option value="">Development 1</option>
+                  <option value="">Development 2</option>
+                </select>
+                <select name="" class="selects" id="">
+                  <option selected value="">Select Apartment</option>
+                  <option value="">Apartment 1</option>
+                  <option value="">Apartment 2</option>
+                </select>
+                <input type="text" class="inputs" placeholder="Client Name" name="" id="" />
+                <input type="email" class="inputs" placeholder="Client Email" name="" id="" />
+                <input type="password" class="inputs" placeholder="Create Password" name="" id="" />
+                <input type="password" class="inputs" placeholder="Confirm Password" name="" id="" />
+                <button type="submit" class="custom-btn dark">Create Login</button>
+              </div>
+            </form>
           </div>
         </div>
       </div>
@@ -214,12 +216,15 @@
               aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <div class="client-modal-inp d-flex flex-column">
-              <input type="email" class="inputs" placeholder="Client Email" value="nkidman@example.com" name="" id="" />
-              <input type="password" class="inputs" placeholder="Create Password" name="" value="123213213" id="" />
+            <form action="">
+              <div class="client-modal-inp d-flex flex-column">
+                <input type="email" class="inputs" placeholder="Client Email" value="nkidman@example.com" name=""
+                  id="" />
+                <input type="password" class="inputs" placeholder="Create Password" name="" value="123213213" id="" />
 
-              <button class="custom-btn dark">Update Login</button>
-            </div>
+                <button type="submit" class="custom-btn dark">Update Login</button>
+              </div>
+            </form>
           </div>
         </div>
       </div>
