--- a/main-aprt-space.html
+++ b/main-aprt-space.html
@@ -18,9 +18,9 @@
 
 <body>
   <aside id="sidebar">
-       <div class="cross-btn" onclick="crossBtn()">
-        <i class="fas fa-xmark"></i>
-      </div>
+    <div class="cross-btn" onclick="crossBtn()">
+      <i class="fas fa-xmark"></i>
+    </div>
     <div class="container p-0">
       <div class="site-logo">
         <img src="asset/images/logo.png" alt="" />
@@ -29,45 +29,51 @@
         <ul class="menu-ul">
           <li class="menu-item d-flex justify-content-start align-items-center">
             <a class="menu-link d-flex justify-content-center align-items-center" href="index.html">
-            <div class="menu-icon">
-              <img src="asset/images/deve-icon.svg" alt="" />
-            </div>
-              Developments</a>
+              <div class="menu-icon">
+                <img src="asset/images/deve-icon.svg" alt="" />
+              </div>
+              Developments
+            </a>
           </li>
           <li class="menu-item active d-flex justify-content-start align-items-center">
             <a class="menu-link d-flex justify-content-center align-items-center" href="appartment.html">
-            <div class="menu-icon">
-              <img src="asset/images/deve-icon.svg" alt="" />
-            </div>
-              Apartments</a>
+              <div class="menu-icon">
+                <img src="asset/images/deve-icon.svg" alt="" />
+              </div>
+              Apartments
+            </a>
           </li>
           <li class="menu-item d-flex justify-content-start align-items-center">
             <a class="menu-link d-flex justify-content-center align-items-center" href="Furnishing.html">
-            <div class="menu-icon">
-              <img src="asset/images/furn-icon.svg" alt="" />
-            </div>
-              Furnishings</a>
+              <div class="menu-icon">
+                <img src="asset/images/furn-icon.svg" alt="" />
+              </div>
+              Furnishings
+            </a>
           </li>
           <li class="menu-item d-flex justify-content-start align-items-center">
             <a class="menu-link d-flex justify-content-center align-items-center" href="fabric.html">
-            <div class="menu-icon">
-              <img src="asset/images/fbr-icon.svg" alt="" />
-            </div>
-              Fabrics</a>
+              <div class="menu-icon">
+                <img src="asset/images/fbr-icon.svg" alt="" />
+              </div>
+              Fabrics
+            </a>
           </li>
           <li class="menu-item d-flex justify-content-start align-items-center">
             <a class="menu-link d-flex justify-content-center align-items-center" href="clients.html">
-            <div class="menu-icon">
-              <img src="asset/images/client-icon.svg" alt="" />
-            </div>
-              Clients</a>
+              <div class="menu-icon">
+                <img src="asset/images/client-icon.svg" alt="" />
+              </div>
+              Clients
+            </a>
           </li>
           <li class="menu-item d-flex justify-content-start align-items-center">
             <a class="menu-link d-flex justify-content-center align-items-center" href="demoUser.html">
-            <div class="menu-icon">
-              <img src="asset/images/client-icon.svg" alt="" />
-            </div>
-              Demo Users</a>
+              <div class="menu-icon">
+                <img src="asset/images/client-icon.svg" alt="" />
+              </div>
+              Demo Users
+            </a>
           </li>
         </ul>
       </div>
@@ -79,11 +85,11 @@
   <div class="main-container container-fluid">
     <div class="contianer-fluid">
       <div class="header d-flex justify-content-between align-items-center">
-         <div class="toggle-btn" onclick="toggleSideNav()">
-            <div class="toggle-bar"></div>
-            <div class="toggle-bar"></div>
-            <div class="toggle-bar"></div>
-          </div>
+        <div class="toggle-btn" onclick="toggleSideNav()">
+          <div class="toggle-bar"></div>
+          <div class="toggle-bar"></div>
+          <div class="toggle-bar"></div>
+        </div>
         <div class="site-name">
           <h3>Admin Panel</h3>
         </div>
@@ -97,39 +103,27 @@
     </div>
     <!-- =-============================ -->
     <div class="apf-container">
+      <form action="">
         <div class="apf-info">
           <div class="row">
             <div class="col-6">
-              <div
-                class="apf-info-div d-flex justify-content-start align-items-start flex-column"
-              >
+              <div class="apf-info-div d-flex justify-content-start align-items-start flex-column">
                 <span>Development Name:</span>
                 <p>Serene Life Residences</p>
                 <div class="apf-inp d-flex flex-column w-100">
                   <label for="">Client Name</label>
-                  <input
-                  class="inputs ps-0 border-0"
-                    type="text"
-                    placeholder="Client Name"
-                    value="Nicole Kidman"
-                  />
+                  <input class="inputs ps-0 border-0" type="text" placeholder="Client Name" value="Nicole Kidman" />
                 </div>
               </div>
             </div>
             <div class="col-6 ps-3">
-              <div
-                class="apf-info-div d-flex justify-content-start align-items-start flex-column"
-              >
+              <div class="apf-info-div d-flex justify-content-start align-items-start flex-column">
                 <span>Apartment Number:</span>
                 <p>B - 70</p>
                 <div class="apf-inp d-flex flex-column w-100">
                   <label for="">Client Email</label>
-                  <input
-                  class="inputs ps-0 border-0"
-                    type="text"
-                    placeholder="Client Name"
-                    value="nkidman@example.com"
-                  />
+                  <input class="inputs ps-0 border-0" type="text" placeholder="Client Name"
+                    value="nkidman@example.com" />
                 </div>
               </div>
             </div>
@@ -137,9 +131,7 @@
         </div>
         <div class="apf-add-spaces d-flex flex-column">
           <h4 class="text-center">Add Apartment Spaces</h4>
-          <div
-            class="apf-space-head d-flex justify-content-between align-items-center"
-          >
+          <div class="apf-space-head d-flex justify-content-between align-items-center">
             <div class="apf-space-name d-flex">
               <img src="../images/add-aprt.svg" alt="" />
               <p class="ps-3">Add Windows</p>
@@ -153,25 +145,24 @@
               <div class="col-6">
                 <p class="align-self-start">Space Name</p>
               </div>
-              <div class="col-6"><p>Number of Windows</p></div>
+              <div class="col-6">
+                <p>Number of Windows</p>
+              </div>
             </div>
           </div>
-      
+
           <div class="apf-main-content apf-clone">
             <div class="apf-bed-sec">
-              <div class="row">
+              <div class="row apf-del-col">
                 <div class="col-6 apf-bed">
                   <input type="text" placeholder="Space Name" name="" id="" />
                 </div>
                 <div class="col-5 apf-bed">
-                  <input type="number" placeholder="0" name="" id="" />
+                  <input type="number" placeholder="0" min="0" name="" id="" />
                 </div>
-                <div
-                  class="col-1 apf-bed-btn d-flex justify-content-center align-items-center"
-                >
-                  <a class="" href="#"
-                    ><img src="asset/images/del.png" alt=""
-                  /></a>
+                <div onclick="removeRow2(this)"
+                  class="col-1 apf-bed-btn d-flex justify-content-center align-items-center">
+                  <a class=""><img src="asset/images/del.png" alt="" /></a>
                 </div>
               </div>
             </div>
@@ -182,14 +173,11 @@
           <div class="apf-add-space-btn align-self-center">
             <a class="custom-btn bg-light-btn" href="#">Back</a>
             <!-- <button class="custom-btn apf-add-next">Next</button> -->
-            <a
-              href="main-aprt-furnishing.html"
-              class="custom-btn apf-add-next"
-              >Next</a
-            >
+            <a href="main-aprt-furnishing.html" class="custom-btn apf-add-next">Next</a>
           </div>
         </div>
-      </div>
+      </form>
+    </div>
     <!-- ================================================== -->
     <!-- ==============   END MAIN CONTAINER   ============ -->
     <!-- Button trigger modal -->
@@ -199,7 +187,7 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.umd.min.js"></script>
     <script src="script.js"></script>
     <script>
-        document.addEventListener("DOMContentLoaded", function () {
+      document.addEventListener("DOMContentLoaded", function () {
         var addButton = document.querySelector(".add-another-space");
 
         addButton.addEventListener("click", function () {
@@ -210,6 +198,11 @@
           document.querySelector(".apf-clone").appendChild(contentToAppend);
         });
       });
+      function removeRow2(element) {
+        var row = element.closest('.apf-del-col');
+        row.parentNode.removeChild(row);
+      }
+
     </script>
 </body>
 
