--- a/appartment.html
+++ b/appartment.html
@@ -18,9 +18,9 @@
 
 <body>
   <aside id="sidebar">
-       <div class="cross-btn" onclick="crossBtn()">
-        <i class="fas fa-xmark"></i>
-      </div>
+    <div class="cross-btn" onclick="crossBtn()">
+      <i class="fas fa-xmark"></i>
+    </div>
     <div class="container p-0">
       <div class="site-logo">
         <img src="asset/images/logo.png" alt="" />
@@ -29,45 +29,51 @@
         <ul class="menu-ul">
           <li class="menu-item d-flex justify-content-start align-items-center">
             <a class="menu-link d-flex justify-content-center align-items-center" href="index.html">
-            <div class="menu-icon">
-              <img src="asset/images/deve-icon.svg" alt="" />
-            </div>
-              Developments</a>
+              <div class="menu-icon">
+                <img src="asset/images/deve-icon.svg" alt="" />
+              </div>
+              Developments
+            </a>
           </li>
           <li class="menu-item active d-flex justify-content-start align-items-center">
             <a class="menu-link d-flex justify-content-center align-items-center" href="appartment.html">
-            <div class="menu-icon">
-              <img src="asset/images/deve-icon.svg" alt="" />
-            </div>
-              Apartments</a>
+              <div class="menu-icon">
+                <img src="asset/images/deve-icon.svg" alt="" />
+              </div>
+              Apartments
+            </a>
           </li>
           <li class="menu-item d-flex justify-content-start align-items-center">
             <a class="menu-link d-flex justify-content-center align-items-center" href="Furnishing.html">
-            <div class="menu-icon">
-              <img src="asset/images/furn-icon.svg" alt="" />
-            </div>
-              Furnishings</a>
+              <div class="menu-icon">
+                <img src="asset/images/furn-icon.svg" alt="" />
+              </div>
+              Furnishings
+            </a>
           </li>
           <li class="menu-item d-flex justify-content-start align-items-center">
             <a class="menu-link d-flex justify-content-center align-items-center" href="fabric.html">
-            <div class="menu-icon">
-              <img src="asset/images/fbr-icon.svg" alt="" />
-            </div>
-              Fabrics</a>
+              <div class="menu-icon">
+                <img src="asset/images/fbr-icon.svg" alt="" />
+              </div>
+              Fabrics
+            </a>
           </li>
           <li class="menu-item d-flex justify-content-start align-items-center">
             <a class="menu-link d-flex justify-content-center align-items-center" href="clients.html">
-            <div class="menu-icon">
-              <img src="asset/images/client-icon.svg" alt="" />
-            </div>
-              Clients</a>
+              <div class="menu-icon">
+                <img src="asset/images/client-icon.svg" alt="" />
+              </div>
+              Clients
+            </a>
           </li>
           <li class="menu-item d-flex justify-content-start align-items-center">
             <a class="menu-link d-flex justify-content-center align-items-center" href="demoUser.html">
-            <div class="menu-icon">
-              <img src="asset/images/client-icon.svg" alt="" />
-            </div>
-              Demo Users</a>
+              <div class="menu-icon">
+                <img src="asset/images/client-icon.svg" alt="" />
+              </div>
+              Demo Users
+            </a>
           </li>
         </ul>
       </div>
@@ -79,11 +85,11 @@
   <div class="main-container container-fluid">
     <div class="contianer-fluid">
       <div class="header d-flex justify-content-between align-items-center">
-         <div class="toggle-btn" onclick="toggleSideNav()">
-            <div class="toggle-bar"></div>
-            <div class="toggle-bar"></div>
-            <div class="toggle-bar"></div>
-          </div>
+        <div class="toggle-btn" onclick="toggleSideNav()">
+          <div class="toggle-bar"></div>
+          <div class="toggle-bar"></div>
+          <div class="toggle-bar"></div>
+        </div>
         <div class="site-name">
           <h3>Admin Panel</h3>
         </div>
@@ -97,43 +103,46 @@
     </div>
     <!-- =-============================ -->
     <div class="apf-container">
-      <div class="apf-info">
-        <div class="row main-aprt-page">
-          <h4>Apartment Info</h4>
-          <div class="col-6">
-            <div class="apf-info-div aprt-page d-flex justify-content-start align-items-start flex-column">
+      <form action="">
+        <div class="apf-info">
+          <div class="row main-aprt-page">
+            <h4>Apartment Info</h4>
+            <div class="col-6">
+              <div class="apf-info-div aprt-page d-flex justify-content-start align-items-start flex-column">
                 <label for="">Select Development</label>
-              <select name="" class="selects" id="">  
-                <option selected class="selects" value="">Select Apartment</option>
-                <option value="">Select Apartment</option>
-                <option value="">Select Apartment</option>
-              </select>
-              <div class="apf-inp apf-inp2 d-flex flex-column w-100">
-                <label for="">Owner Name</label>
-                <input class="inputs border-0" type="text" placeholder="" />
+                <select name="" class="selects" id="">
+                  <option selected class="selects" value="">Select Apartment</option>
+                  <option value="">Select Apartment</option>
+                  <option value="">Select Apartment</option>
+                </select>
+                <div class="apf-inp apf-inp2 d-flex flex-column w-100">
+                  <label for="">Owner Name</label>
+                  <input class="inputs border-0" type="text" placeholder="" />
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-6 ps-3">
-            <div class="apf-info-div aprt-page d-flex justify-content-start align-items-start flex-column">
+            <div class="col-6 ps-3">
+              <div class="apf-info-div aprt-page d-flex justify-content-start align-items-start flex-column">
                 <label for="">Apartment Number</label>
-              <select name="" class="selects" id="">
-                <option selected value="">Select Apartment</option>
-                <option value="">Select Apartment</option>
-                <option value="">Select Apartment</option>
-              </select>
+                <select name="" class="selects" id="">
+                  <option selected value="">Select Apartment</option>
+                  <option value="">Select Apartment</option>
+                  <option value="">Select Apartment</option>
+                </select>
 
-              <div class="apf-inp apf-inp2 d-flex flex-column w-100">
-                <label for="">Owner Email</label>
-                <input class="inputs border-0" type="email" placeholder="" />
+                <div class="apf-inp apf-inp2 d-flex flex-column w-100">
+                  <label for="">Owner Email</label>
+                  <input class="inputs border-0" type="email" placeholder="" />
+                </div>
               </div>
             </div>
           </div>
+          <div class="aprt-page-btn d-flex justify-content-center align-items-center">
+            <!-- <button class="custom-btn dark">Continue</button> -->
+            <a class="custom-btn dark" href="main-aprt-space.html">Continue</a>
+          </div>
         </div>
-        <div class="aprt-page-btn d-flex justify-content-center align-items-center">
-          <a class="custom-btn dark" href="main-aprt-space.html">Continue</a>
-        </div>
-      </div>
+      </form>
 
     </div>
     <!-- ================================================== -->
