--- a/asset/pages/addApartment.html
+++ b/asset/pages/addApartment.html
@@ -17,9 +17,9 @@
 
 <body>
   <aside id="sidebar">
-       <div class="cross-btn" onclick="crossBtn()">
-        <i class="fas fa-xmark"></i>
-      </div>
+    <div class="cross-btn" onclick="crossBtn()">
+      <i class="fas fa-xmark"></i>
+    </div>
     <div class="container p-0">
       <div class="site-logo">
         <img src="../images/logo.png" alt="" />
@@ -28,45 +28,51 @@
         <ul class="menu-ul">
           <li class="menu-item  d-flex justify-content-start align-items-center">
             <a class="menu-link d-flex justify-content-center align-items-center" href="../../index.html">
-            <div class="menu-icon">
-              <img src="../images/deve-icon.svg" alt="" />
-            </div>
-              Developments</a>
+              <div class="menu-icon">
+                <img src="../images/deve-icon.svg" alt="" />
+              </div>
+              Developments
+            </a>
           </li>
           <li class="menu-item active d-flex justify-content-start align-items-center">
             <a class="menu-link d-flex justify-content-center align-items-center" href="../../appartment.html">
-            <div class="menu-icon">
-              <img src="../images/deve-icon.svg" alt="" />
-            </div>
-              Apartments</a>
+              <div class="menu-icon">
+                <img src="../images/deve-icon.svg" alt="" />
+              </div>
+              Apartments
+            </a>
           </li>
           <li class="menu-item d-flex justify-content-start align-items-center">
             <a class="menu-link d-flex justify-content-center align-items-center" href="../../Furnishing.html">
-            <div class="menu-icon">
-              <img src="../images/furn-icon.svg" alt="" />
-            </div>
-              Furnishings</a>
+              <div class="menu-icon">
+                <img src="../images/furn-icon.svg" alt="" />
+              </div>
+              Furnishings
+            </a>
           </li>
           <li class="menu-item d-flex justify-content-start align-items-center">
             <a class="menu-link d-flex justify-content-center align-items-center" href="../../fabric.html">
-            <div class="menu-icon">
-              <img src="../images/fbr-icon.svg" alt="" />
-            </div>
-              Fabrics</a>
+              <div class="menu-icon">
+                <img src="../images/fbr-icon.svg" alt="" />
+              </div>
+              Fabrics
+            </a>
           </li>
           <li class="menu-item d-flex justify-content-start align-items-center">
             <a class="menu-link d-flex justify-content-center align-items-center" href="../../clients.html">
-            <div class="menu-icon">
-              <img src="../images/client-icon.svg" alt="" />
-            </div>
-              Clients</a>
+              <div class="menu-icon">
+                <img src="../images/client-icon.svg" alt="" />
+              </div>
+              Clients
+            </a>
           </li>
           <li class="menu-item d-flex justify-content-start align-items-center">
             <a class="menu-link d-flex justify-content-center align-items-center" href="../../demoUser.html">
-            <div class="menu-icon">
-              <img src="../images/client-icon.svg" alt="" />
-            </div>
-              Demo Users</a>
+              <div class="menu-icon">
+                <img src="../images/client-icon.svg" alt="" />
+              </div>
+              Demo Users
+            </a>
           </li>
         </ul>
       </div>
@@ -79,11 +85,11 @@
     <!-- ======================= HEADER ====================== -->
     <div class="contianer-fluid">
       <div class="header d-flex justify-content-between align-items-center">
-         <div class="toggle-btn" onclick="toggleSideNav()">
-            <div class="toggle-bar"></div>
-            <div class="toggle-bar"></div>
-            <div class="toggle-bar"></div>
-          </div>
+        <div class="toggle-btn" onclick="toggleSideNav()">
+          <div class="toggle-bar"></div>
+          <div class="toggle-bar"></div>
+          <div class="toggle-bar"></div>
+        </div>
         <div class="site-name">
           <h3>Admin Panel</h3>
         </div>
@@ -98,159 +104,177 @@
     <!-- =-===================== END HEADER ==================== -->
     <!-- ====================================================== -->
 
-    <div class="add-aprtment">
-      <div class="row edit-aprt-row">
-        <form action=""></form>
-        <div class="col-lg-5 edit-ai-col col-md-6">
-          <div class="aprt-form">
+    <form action="">
+      <div class="add-aprtment">
+        <div class="row edit-aprt-row w-100">
+          <div class="col-lg-5 edit-ai-col col-md-6">
+            <div class="aprt-form">
 
-            <div class="aprt-form-inp">
-              <label for="name">Development Name</label>
-              <input type="text" placeholder="Development Name" value="Serene Life Residences">
-            </div>
-            <div class="aprt-form-inp">
-              <label for="name">Development Address</label>
-              <input type="text" placeholder="Development Address" value="North city garden road - ST302, Australia">
-            </div>
-            <div class="aprt-form-btns d-flex justify-content-between align-items-center">
-              <div class="aprt-form-save d-flex">
-                <a class="aprt-form-cencel" href="#">Cancel</a>
-                <button onclick="showAlert()" class="custom-btn dark">Save</button>
+              <div class="aprt-form-inp">
+                <label for="name">Development Name</label>
+                <input type="text" placeholder="Development Name" value="Serene Life Residences">
               </div>
-              <div class="alert save-alert alert-success" role="alert">
-                Apartment Edited Successfully!
+              <div class="aprt-form-inp">
+                <label for="name">Development Address</label>
+                <input type="text" placeholder="Development Address" value="North city garden road - ST302, Australia">
               </div>
-              <div class="aprt-form-create">
-                <button class="table-edit" class="custom-btn dark"  data-mdb-ripple-init
-                  data-mdb-modal-init data-mdb-target="#clientUpdate">Add Apartment</button>
+              <div class="aprt-form-btns d-flex justify-content-between align-items-center">
+                <div class="aprt-form-save d-flex">
+                  <a class="aprt-form-cencel" href="#">Cancel</a>
+                  <button type="submit" onclick="showAlert()" class="custom-btn dark">Save</button>
+                </div>
+                <div class="alert save-alert alert-success" role="alert">
+                  Apartment Edited Successfully!
+                </div>
+                <div class="aprt-form-create">
+                  <button class="table-edit" class="custom-btn dark" data-mdb-ripple-init data-mdb-modal-init
+                    data-mdb-target="#clientUpdate">Add Apartment</button>
+                </div>
               </div>
-            </div>
 
+            </div>
           </div>
-        </div>
-        <div class="af-pos col-lg-2 col-md-6 edit-aimg-col">
-          <div class="af-file-inp">
-            <img class="w-100" src="../images/file Img.png" alt="" />
+          <div class="af-pos col-lg-2 col-md-6 edit-aimg-col">
+            <div class="af-file-inp">
+              <img class="w-100" src="../images/file Img.png" alt="" />
+            </div>
+            <div class="fi-label d-flex justify-content-center align-items-center">
+              <input type="file" id="file-input" style="display: none;">
+              <label for="file-input">
+                <span class="file-span"><img class="w-100" src="../images/file-inp.png" alt=""></span>
+              </label>
+            </div>
           </div>
-          <div class="fi-label d-flex justify-content-center align-items-center">
-            <input type="file" id="file-input" style="display: none;">
-            <label for="file-input">
-              <span class="file-span"><img class="w-100" src="../images/file-inp.png" alt=""></span>
-            </label>
-          </div>
-        </div>
 
-        </form>
-      </div>
+    </form>
+  </div>
+  </div>
+  <div class="aprt-table">
+    <div class="table-container table-responsive">
+      <table class="table-striped table">
+        <thead>
+          <tr>
+            <th class="col-3 col-lg-4 th">Apartment Number</th>
+            <th class="col col-lg-4 th center-th">Development Name</th>
+            <th class="col-4 col-md-3 col-lg-4 th last-th">Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="col-3 col-lg-3">B - 70</td>
+            <td class="col center-td col-lg-4">Serene Life Residences</td>
+            <td class="col-4 col-md-3 last-td col-lg-5">
+              <div class="table-btns d-flex justify-content-center align-items-center">
+                <a href="addAprtFurn.html" class="custom-btn dark">Edit</a>
+                <a class="table-del" href="#" onclick="openModal()">Delete</a>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td class="col-3 col-lg-3">B - 70</td>
+            <td class="col center-td col-lg-4">Serene Life Residences</td>
+            <td class="col-4 col-md-3 last-td col-lg-5">
+              <div class="table-btns d-flex justify-content-center align-items-center">
+                <a href="addAprtFurn.html" class="custom-btn dark">Edit</a>
+                <a class="table-del" href="#" onclick="openModal()">Delete</a>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td class="col-3 col-lg-3">B - 70</td>
+            <td class="col center-td col-lg-4">Serene Life Residences</td>
+            <td class="col-4 col-md-3 last-td col-lg-5">
+              <div class="table-btns d-flex justify-content-center align-items-center">
+                <a href="addAprtFurn.html" class="custom-btn dark">Edit</a>
+                <a class="table-del" href="#" onclick="openModal()">Delete</a>
+              </div>
+            </td>
+          </tr>
+
+        </tbody>
+      </table>
     </div>
-    <div class="aprt-table">
-      <div class="table-container table-responsive">
-        <table class="table-striped table">
-          <thead>
-            <tr>
-              <th class="col-3 col-lg-4 th">Apartment Number</th>
-              <th class="col col-lg-4 th center-th">Development Name</th>
-              <th class="col-4 col-md-3 col-lg-4 th last-th">Action</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td class="col-3 col-lg-3">B - 70</td>
-              <td class="col center-td col-lg-4">Serene Life Residences</td>
-              <td class="col-4 col-md-3 last-td col-lg-5">
-                <div class="table-btns d-flex justify-content-center align-items-center">
-                   <a href="addAprtFurn.html" class="custom-btn dark">Edit</a>
-                  <a class="table-del" href="#" onclick="openModal()">Delete</a>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td class="col-3 col-lg-3">B - 70</td>
-              <td class="col center-td col-lg-4">Serene Life Residences</td>
-              <td class="col-4 col-md-3 last-td col-lg-5">
-                <div class="table-btns d-flex justify-content-center align-items-center">
-                   <a href="addAprtFurn.html" class="custom-btn dark">Edit</a>
-                  <a class="table-del" href="#" onclick="openModal()">Delete</a>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td class="col-3 col-lg-3">B - 70</td>
-              <td class="col center-td col-lg-4">Serene Life Residences</td>
-              <td class="col-4 col-md-3 last-td col-lg-5">
-                <div class="table-btns d-flex justify-content-center align-items-center">
-                   <a href="addAprtFurn.html" class="custom-btn dark">Edit</a>
-                  <a class="table-del" href="#" onclick="openModal()">Delete</a>
-                </div>
-              </td>
-            </tr>
+  </div>
+  <!-- ========================= Modal ====================== -->
+  <div class="modal fade" id="clientUpdate" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog clients-modal  add-apart-modal">
+      <div class="modal-content clients-content add-aprt-content">
 
-          </tbody>
-        </table>
-      </div>
-    </div>
-    <!-- ========================= Modal ====================== -->
-    <div class="modal fade" id="clientUpdate" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog clients-modal  add-apart-modal">
-        <div class="modal-content clients-content add-aprt-content">
-          <div class="modal-header">
-            <h5 class="modal-title align-self-center client-modal-title" id="exampleModalLabel">
-              Add New Apartments
-            </h5>
-            <button type="button" class="btn-close af-close-btn" data-mdb-ripple-init data-mdb-dismiss="modal"
-              aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <div class="client-modal-inp d-flex flex-column">
-              <div class="afd-badge-inp d-flex flex-column">
-            <label for="">Enter Apartment Number  </label>
-            <div class="badge-input-container">
-              <input
-                class="inputs"
-                type="text"
-                id="badge-input"
-                placeholder="Enter text"
-              />
-            </div>
-          </div>
-          
-            
+        <div class="modal-header">
+          <h5 class="modal-title align-self-center client-modal-title" id="exampleModalLabel">
+            Add New Apartments
+          </h5>
+          <button type="button" class="btn-close af-close-btn" data-mdb-ripple-init data-mdb-dismiss="modal"
+            aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
 
-              <button class="custom-btn dark">Save</button>
+          <div class="client-modal-inp d-flex flex-column">
+            <div class="afd-badge-inp d-flex flex-column">
+              <label for="">Enter Apartment Number </label>
+              <div class="badge-input-container">
+                <input class="inputs" type="text" id="badge-input" placeholder="Enter text" />
+              </div>
             </div>
+
+
+
+            <button type="submit" onclick="saveInput()" class="custom-btn dark">Save</button>
           </div>
+
+
         </div>
       </div>
     </div>
-    <!-- ================================================== -->
-      <div id="myModal" class="modal-sec">
-        <!-- Modal content -->
-        <div
-          class="modal-content d-flex justify-content-center align-items-center flex-column"
-        >
-          <div class="w-100 modal-head">
-            <p>Delete Apartment?</p>
-          </div>
-          <div
-            class="modal-cont d-flex justify-content-center align-items-center flex-column"
-          >
-            <p>Are you sure you want to delete
-this apartment?</p>
-            <div
-              class="modal-btns d-flex justify-content-center align-items-center"
-            >
-              <button class="mb-del" onclick="confirmDelete()">Yes</button>
-              <button class="mb-canc" onclick="closeModal()">No</button>
-            </div>
-          </div>
+  </div>
+  <!-- ================================================== -->
+  <div id="myModal" class="modal-sec">
+    <!-- Modal content -->
+    <div class="modal-content d-flex justify-content-center align-items-center flex-column">
+      <div class="w-100 modal-head">
+        <p>Delete Apartment?</p>
+      </div>
+      <div class="modal-cont d-flex justify-content-center align-items-center flex-column">
+        <p>Are you sure you want to delete
+          this apartment?</p>
+        <div class="modal-btns d-flex justify-content-center align-items-center">
+          <button class="mb-del" onclick="confirmDelete()">Yes</button>
+          <button class="mb-canc" onclick="closeModal()">No</button>
         </div>
       </div>
-    <!-- ==============   END MAIN CONTAINER   ============ -->
+    </div>
+  </div>
+  <!-- ==============   END MAIN CONTAINER   ============ -->
 
-    <!-- MDB -->
-    <script type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.umd.min.js"></script>
-    <script src="../../script.js"></script>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.umd.min.js"></script>
+  <script src="../../script.js"></script>
+  <script>
+
+    function saveInput() {
+      // Get the value entered in the input field
+      var inputValue = document.getElementById("badge-input").value;
+
+      // Find the parent element where you want to append the new input
+      var parentElement = document.querySelector(".aprt-form");
+
+      // Create a new div element to hold the input value
+      var newDivElement = document.createElement("div");
+      newDivElement.classList.add("aprt-form-inp");
+      newDivElement.innerHTML = `
+      <label for="name">Apartment Number</label>
+      <input type="text" placeholder="Apartment Number" value="${inputValue}">
+    `;
+
+      // Append the new div element to the parent element
+      parentElement.appendChild(newDivElement);
+
+      // Clear the input field after saving
+      document.getElementById("badge-input").value = "";
+    }
+
+
+  </script>
 </body>
 
 </html>
