--- a/asset/pages/addMotarization.html
+++ b/asset/pages/addMotarization.html
@@ -1,157 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lusso Admin Panel</title>
-    <!-- Font Awesome -->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-      rel="stylesheet"
-    />
-    <!-- Google Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-      rel="stylesheet"
-    />
-    <!-- MDB -->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../../index.css" />
-    <link rel="stylesheet" href="../../phone.css" />
-  </head>
-  <body>
-    <aside id="sidebar">
-         <div class="cross-btn" onclick="crossBtn()">
-        <i class="fas fa-xmark"></i>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Lusso Admin Panel</title>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../../index.css" />
+  <link rel="stylesheet" href="../../phone.css" />
+</head>
+
+<body>
+  <aside id="sidebar">
+    <div class="cross-btn" onclick="crossBtn()">
+      <i class="fas fa-xmark"></i>
+    </div>
+    <div class="container p-0">
+      <div class="site-logo">
+        <img src="../images/logo.png" alt="" />
       </div>
-      <div class="container p-0">
-        <div class="site-logo">
-          <img src="../images/logo.png" alt="" />
-        </div>
-        <div class="aside-menu">
-          <ul class="menu-ul">
-            <li
-              class="menu-item  d-flex justify-content-start align-items-center"
-            >
+      <div class="aside-menu">
+        <ul class="menu-ul">
+          <li class="menu-item  d-flex justify-content-start align-items-center">
             <a class="menu-link d-flex justify-content-center align-items-center" href="../../index.html">
               <div class="menu-icon">
                 <img src="../images/deve-icon.svg" alt="" />
               </div>
-                Developments</a>
-            </li>
-            <li
-              class="menu-item active d-flex justify-content-start align-items-center"
-            >
+              Developments
+            </a>
+          </li>
+          <li class="menu-item active d-flex justify-content-start align-items-center">
             <a class="menu-link d-flex justify-content-center align-items-center" href="../../appartment.html">
               <div class="menu-icon">
                 <img src="../images/deve-icon.svg" alt="" />
               </div>
-                Apartments</a>
-            </li>
-            <li
-              class="menu-item d-flex justify-content-start align-items-center"
-            >
+              Apartments
+            </a>
+          </li>
+          <li class="menu-item d-flex justify-content-start align-items-center">
             <a class="menu-link d-flex justify-content-center align-items-center" href="../../Furnishing.html">
               <div class="menu-icon">
                 <img src="../images/furn-icon.svg" alt="" />
               </div>
-            Furnishings</a>
-            </li>
-            <li
-              class="menu-item d-flex justify-content-start align-items-center"
-            >
+              Furnishings
+            </a>
+          </li>
+          <li class="menu-item d-flex justify-content-start align-items-center">
             <a class="menu-link d-flex justify-content-center align-items-center" href="../../fabric.html">
               <div class="menu-icon">
                 <img src="../images/fbr-icon.svg" alt="" />
               </div>
-                Fabrics</a>
-            </li>
-            <li
-              class="menu-item d-flex justify-content-start align-items-center"
-            >
+              Fabrics
+            </a>
+          </li>
+          <li class="menu-item d-flex justify-content-start align-items-center">
             <a class="menu-link d-flex justify-content-center align-items-center" href="../../clients.html">
               <div class="menu-icon">
                 <img src="../images/client-icon.svg" alt="" />
               </div>
-                Clients</a>
-            </li>
-            <li
-              class="menu-item d-flex justify-content-start align-items-center"
-            >
+              Clients
+            </a>
+          </li>
+          <li class="menu-item d-flex justify-content-start align-items-center">
             <a class="menu-link d-flex justify-content-center align-items-center" href="../../demoUser.html">
               <div class="menu-icon">
                 <img src="../images/client-icon.svg" alt="" />
               </div>
-                Demo Users</a>
-            </li>
-          </ul>
+              Demo Users
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </aside>
+
+  <!-- ================================================== -->
+  <!-- =================    MAIN CONTAINER   ============ -->
+  <div class="main-container container-fluid">
+    <!-- ======================= HEADER ====================== -->
+    <div class="contianer-fluid">
+      <div class="header d-flex justify-content-between align-items-center">
+        <div class="toggle-btn" onclick="toggleSideNav()">
+          <div class="toggle-bar"></div>
+          <div class="toggle-bar"></div>
+          <div class="toggle-bar"></div>
+        </div>
+        <div class="site-name">
+          <h3>Admin Panel</h3>
+        </div>
+        <div class="admin-info d-flex justify-content-centter align-items-center">
+          <p>Admin Name</p>
+          <div class="user-img">
+            <img src="../images/user-igm.png" alt="" />
+          </div>
         </div>
       </div>
-    </aside>
+    </div>
+    <!-- =-===================== END HEADER ==================== -->
+    <!-- ====================================================== -->
 
-    <!-- ================================================== -->
-    <!-- =================    MAIN CONTAINER   ============ -->
-    <div class="main-container container-fluid">
-      <!-- ======================= HEADER ====================== -->
-      <div class="contianer-fluid">
-        <div class="header d-flex justify-content-between align-items-center">
-           <div class="toggle-btn" onclick="toggleSideNav()">
-            <div class="toggle-bar"></div>
-            <div class="toggle-bar"></div>
-            <div class="toggle-bar"></div>
-          </div>
-          <div class="site-name">
-            <h3>Admin Panel</h3>
-          </div>
-          <div
-            class="admin-info d-flex justify-content-centter align-items-center"
-          >
-            <p>Admin Name</p>
-            <div class="user-img">
-              <img src="../images/user-igm.png" alt="" />
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- =-===================== END HEADER ==================== -->
-      <!-- ====================================================== -->
-
-      <!-- ================ MAIN CONTENT ========================== -->
-      <div class="motorization-container">
+    <!-- ================ MAIN CONTENT ========================== -->
+    <div class="motorization-container">
+      <form action="">
         <div class="apf-info mt-5">
           <div class="row">
             <div class="col-6">
-              <div
-                class="apf-info-div d-flex justify-content-start align-items-start flex-column"
-              >
+              <div class="apf-info-div d-flex justify-content-start align-items-start flex-column">
                 <span>Development Name:</span>
                 <p>Serene Life Residences</p>
                 <div class="apf-inp apf-inp2 d-flex flex-column w-100">
                   <label for="">Client Name</label>
-                  <input
-                    type="text"
-                    placeholder="Client Name"
-                    value="Nicole Kidman"
-                  />
+                  <input type="text" placeholder="Client Name" value="Nicole Kidman" />
                 </div>
               </div>
             </div>
             <div class="col-6 ps-3">
-              <div
-                class="apf-info-div d-flex justify-content-start align-items-start flex-column"
-              >
+              <div class="apf-info-div d-flex justify-content-start align-items-start flex-column">
                 <span>Apartment Number:</span>
                 <p>B - 70</p>
                 <div class="apf-inp apf-inp2 d-flex flex-column w-100">
                   <label for="">Client Email</label>
-                  <input
-                    type="text"
-                    placeholder="Client Name"
-                    value="nkidman@example.com"
-                  />
+                  <input type="text" placeholder="Client Name" value="nkidman@example.com" />
                 </div>
               </div>
             </div>
@@ -159,9 +133,7 @@
         </div>
         <div class="apf-add-spaces d-flex flex-column">
           <h4 class="text-center">Add Apartment Spaces</h4>
-          <div
-            class="apf-space-head d-flex justify-content-between align-items-center"
-          >
+          <div class="apf-space-head d-flex justify-content-between align-items-center">
             <div class="apf-space-name d-flex">
               <img src="../images/moto-icon.svg" alt="" />
               <p class="ps-3">Add Motorisation</p>
@@ -172,29 +144,19 @@
               <div class="col-8">
                 <p class="align-self-start">Space Name</p>
               </div>
-              <div class="col-4 moto-price-col"><p>Price in AUD</p></div>
+              <div class="col-4 moto-price-col">
+                <p>Price in AUD</p>
+              </div>
             </div>
           </div>
           <div class="apf-main-content">
             <div class="apf-bed-sec">
               <div class="row">
                 <div class="col-8 apf-bed moto-bed-inp">
-                  <input
-                    type="text"
-                    value="Bed 1"
-                    placeholder="Space Name"
-                    name=""
-                    id=""
-                  />
+                  <input type="text" value="Bed 1" placeholder="Space Name" name="" id="" />
                 </div>
                 <div class="col-4 apf-bed">
-                  <input
-                    type="number"
-                    value="2"
-                    placeholder="Number of Windows"
-                    name=""
-                    id=""
-                  />
+                  <input type="number" min="0" value="2" placeholder="Number of Windows" name="" id="" />
                 </div>
               </div>
             </div>
@@ -203,22 +165,10 @@
             <div class="apf-bed-sec">
               <div class="row">
                 <div class="col-8 apf-bed moto-bed-inp">
-                  <input
-                    type="text"
-                    value="Bed 2"
-                    placeholder="Space Name"
-                    name=""
-                    id=""
-                  />
+                  <input type="text" value="Bed 2" placeholder="Space Name" name="" id="" />
                 </div>
                 <div class="col-4 apf-bed">
-                  <input
-                    type="number"
-                    value="1"
-                    placeholder="Number of Windows"
-                    name=""
-                    id=""
-                  />
+                  <input type="number" min="0" value="1" placeholder="Number of Windows" name="" id="" />
                 </div>
               </div>
             </div>
@@ -227,22 +177,10 @@
             <div class="apf-bed-sec">
               <div class="row">
                 <div class="col-8 apf-bed moto-bed-inp">
-                  <input
-                    type="text"
-                    value="Bed 3"
-                    placeholder="Space Name"
-                    name=""
-                    id=""
-                  />
+                  <input type="text" value="Bed 3" placeholder="Space Name" name="" id="" />
                 </div>
                 <div class="col-4 apf-bed">
-                  <input
-                    type="number"
-                    value="1"
-                    placeholder="Number of Windows"
-                    name=""
-                    id=""
-                  />
+                  <input type="number" min="0" value="1" placeholder="Number of Windows" name="" id="" />
                 </div>
               </div>
             </div>
@@ -251,22 +189,10 @@
             <div class="apf-bed-sec">
               <div class="row">
                 <div class="col-8 apf-bed moto-bed-inp">
-                  <input
-                    type="text"
-                    value="Living"
-                    placeholder="Space Name"
-                    name=""
-                    id=""
-                  />
+                  <input type="text" value="Living" placeholder="Space Name" name="" id="" />
                 </div>
                 <div class="col-4 apf-bed">
-                  <input
-                    type="number"
-                    value="2"
-                    placeholder="Number of Windows"
-                    name=""
-                    id=""
-                  />
+                  <input type="number" min="0" value="2" placeholder="Number of Windows" name="" id="" />
                 </div>
               </div>
             </div>
@@ -275,56 +201,35 @@
             <div class="apf-bed-sec">
               <div class="row">
                 <div class="col-8 apf-bed moto-bed-inp">
-                  <input
-                    type="text"
-                    value="Study"
-                    placeholder="Space Name"
-                    name=""
-                    id=""
-                  />
+                  <input type="text" value="Study" placeholder="Space Name" name="" id="" />
                 </div>
                 <div class="col-4 apf-bed">
-                  <input
-                    type="number"
-                    value="2"
-                    placeholder="Number of Windows"
-                    name=""
-                    id=""
-                  />
+                  <input type="number" min="0" value="2" placeholder="Number of Windows" name="" id="" />
                 </div>
               </div>
             </div>
           </div>
 
-         
-          </div>
-        </div>
-        <div
-          class="apf-last-btns moto-auto-btns d-flex justify-content-center align-items-center flex-column"
-        >
-          <a
-            href="addMotarization.html"
-            type="submit"
-            class="custom-btn continue"
-            >Complete Process</a
-          >
-          <a href="addAprtFurn.html" class="back custom-btn" type="sumbit"
-            >Back</a
-          >
-        </div>
-      </div>
-      <!-- ======================================================== -->
 
-      <!-- ================================================== -->
-      <!-- ==============   END MAIN CONTAINER   ============ -->
+        </div>
     </div>
-    <!-- MDB -->
-    <script
-      type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.umd.min.js"
-    ></script>
+    <div class="apf-last-btns moto-auto-btns d-flex justify-content-center align-items-center flex-column">
+      <button type="submit" class="custom-btn continue">Complete Process</button>
+      </form>
+      <!-- <a href="addMotarization.html" type="submit" class="custom-btn continue">Complete Process</a> -->
+      <a href="addAprtFurn.html" class="back custom-btn" type="sumbit">Back</a>
+    </div>
+  </div>
+  <!-- ======================================================== -->
 
-    <script src="../../script.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  </body>
+  <!-- ================================================== -->
+  <!-- ==============   END MAIN CONTAINER   ============ -->
+  </div>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.umd.min.js"></script>
+
+  <script src="../../script.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+</body>
+
 </html>
